# gstreamer_catkin

./: CMakeLists.txt  README.md  package.xml
cmake/: gstreamer-extras.cmake.in
