<package>
  <name>gstreamer_catkin</name>
  <version>0.0.0</version>
  <description>gstreamer_catkin</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>bison</build_depend>
  <build_depend>flex</build_depend>
  <build_depend>libglib-dev</build_depend>
</package>
